Changed text-align to left, fixed Princeton link, made logo responsive

--- a/hy14/css/grayscale.css
+++ b/hy14/css/grayscale.css
@@ -384,3 +384,11 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
+
+@media(max-width:500px) {
+    #logo {
+        width: 400px;
+        height: 400px;
+
+    }
+}
